--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,8 @@
 title = "Airspace for Hugo"
-baseURL = "https://examplesite.com"
+baseURL = "https://examplesite.com/"
 languageCode = "en-us"
 theme = "airspace-hugo"
-
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 # The site's parameters
 [params]
   home = "Home"
